radix-engine-tests/tests/dec_macros/src/pdec_err_overflow_1.stderr
error: The number is too large to fit in a precise decimal.
 --> src/pdec_err_overflow_1.rs:5:16
  |
5 |         pdec!(-57896044618658097711785492504343953926634.992332820282019728792003956564819969);
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
